[package]
name = "meow"
version = "0.2.2"
authors = ["Ezra Barrow <barrow@tilde.team>"]
edition = "2018"
license-file = "LICENSE.txt"
description = "MEOW as DNA metaphor"
readme = "README.md"
repository = "https://github.com/barrowsys/MEOW"

[dependencies]
clap = "2.33.3"
simplelog = "0.8.0"
log = "0.4"
